feat: adiciona form caso de teste
Signed-off-by: Diogo Sobezak <96633512+diogobonet@users.noreply.github.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,3 +52,11 @@ button.primary-button {
     }
 }
 
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+}
+
