feat: adiciona pagina de caso de teste
Signed-off-by: Diogo Sobezak <96633512+diogobonet@users.noreply.github.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,3 +60,11 @@ button.primary-button {
     gap: 12px;
 }
 
+.btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+
