component: adiciona componente de secao centralizada
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/layout/Register.scss
+++ b/src/styles/layout/Register.scss
@@ -16,6 +16,7 @@ h1.head {
     justify-content: center;
     flex-wrap: wrap;
     gap: 26px;
+    padding: 12px;
 
     div.onboarding-box {
         display: flex;
