feat: adiciona pagina de create organization 1
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -4,4 +4,4 @@
 
 $background-color-primary: #E2DADA;
 $primary-color: #2E819D;
-$font-inter: "Inter", sans-serif;;
+$font-inter: "Inter", sans-serif;
