feat: adiciona paginas de criacao de organizacao
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -3,6 +3,7 @@
 // Componente Geral de Botão
 button.MuiButtonBase-root {
     letter-spacing: normal;
+    font-family: variables.$font-inter;
     min-width: 120px !important;
     text-transform: none;
     border-radius: 8px;
@@ -37,6 +38,25 @@ button.MuiButton-outlined.MuiButton-outlinedPrimary {
         border-top-left-radius: 8px;
         border-bottom-left-radius: 8px;
     }
-
-
 }
+
+.MuiToggleButtonGroup-root.toggle-button-select {
+            flex-wrap: wrap;
+            gap: 12px;
+            button {
+                padding: 4px 12px;
+                border: 1px solid #B1ADAD;
+                border-left: 1px solid #B1ADAD;
+                border-right: 1px solid #B1ADAD;
+                border-top-right-radius: 8px;
+                border-bottom-right-radius: 8px;
+                border-top-left-radius: 8px;
+                border-bottom-left-radius: 8px;
+            }
+    }
+
+    .toggle-button-select button.Mui-selected {
+        border: none;
+        background-color: #2E819D;
+        color: white
+    }
