feat: adiciona pagina 4 de criar organizacao
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -19,7 +19,7 @@ button.MuiButton-contained.MuiButton-containedPrimary {
 // Secondary Button (Outline)
 button.MuiButton-outlined.MuiButton-outlinedPrimary {
     border-color: #B1ADAD;
-    color: black;
+    color: #7C7C7C;
 }
 
 // Button Group Component
