styles: adiciona variaveis do scss
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/base/_typograph.scss
+++ b/src/styles/base/_typograph.scss
@@ -8,3 +8,11 @@
     font-style: $font-style-normal;
   }
 }
+
+main .MuiTypography-root {
+  font-family: 'Inter';
+}
+
+.MuiFormControlLabel-asterisk {
+  color: #C34646;
+}
