feat: adiciona GET de organizacao
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -207,6 +207,10 @@ button.primary-button {
         font-size: 20px;
     }
 
+    .organization-container {
+        @include flex-column(start, stretch, 16px);
+    }
+
     .project-organization-general {
         @include flex-column(start, stretch, 16px);
     }
