feat: adiciona projetos e organizacao funcionando corretamente
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -137,11 +137,12 @@ button.primary-button {
 .project-item {
     display: flex;
     flex-direction: column;
-    width: 240px;
+    width: 100%;
     padding: 24px;
     background-color: white;
     border-radius: 12px;
-    gap: 20px;
+    gap: 12px;
+    border: 2px solid variables.$gray-100;
     img {
         border-radius: 12px;
         width: 100%;
