feat: adiciona ajustes nas paginas de projeto
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/layout/Header.scss
+++ b/src/styles/layout/Header.scss
@@ -3,4 +3,9 @@ header.simple-header {
     justify-content: space-between;
     align-items: center;
     padding: 1em 2em;
+    .photo-name-user {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+    }
 }
