feat: editar organizacao e ajuste na estilizacao de modal de projetos e organizacao
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -26,7 +26,10 @@ button.MuiButton-outlined.MuiButton-outlinedPrimary {
     box-shadow: none;
     justify-content: space-between;
     margin-top: 8px;
-    
+
+    button {
+        min-width: 120px;
+    }
 
     .MuiButtonGroup-firstButton {
         border-top-right-radius: 8px;
