feat: adiciona modal de delecao de organizacao
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -210,7 +210,7 @@ button.primary-button {
     }
 }
 
-.centered-section:has(.organization-section) {
+.centered-section:has(.all-organizations) {
     height: 75vh;
 }
 
