feat: adiciona edicao de test cases
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -281,3 +281,12 @@ button.primary-button {
         text-decoration: none;
     }
 }
+
+.MuiDataGrid-columnHeaderTitleContainerContent {
+    .MuiDataGrid-columnHeaderTitle {
+        font-weight: bold;
+        font-family: variables.$font-inter;
+    }
+}
+
+
