feat: adiciona validacoes em grupo de acessos
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/layout/Modal.scss
+++ b/src/styles/layout/Modal.scss
@@ -23,4 +23,8 @@
         width: 100% !important;
         border-radius: 16px;
     }
+
+    .group-acess-form {
+        width: 90% !important;
+    }
 }
