feat: adiciona ferramentas para o quadro kanban
Signed-off-by: diogobonet <diogosobezak@gmail.com>

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -323,3 +323,17 @@ button.primary-button {
 .css-1yeiifd {
     height: fit-content;
 }
+
+.test-case-prefix {
+    font-size: 18px;
+    font-weight: bold;
+    color: #2E819D;
+    margin-right: 8px;
+}
+
+.left-panel {
+    padding: 12px;
+    border: 2.5px solid #C8C6C6;
+    border-radius: 12px;
+    height: fit-content;
+}
